# CKBuilder

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES-FALSE-POSITIVE-A-FLAG.md  FIXES-INSPECTOR-HEALTH.md  FIXES-LOWER-ATOMIC.md  FIXES-NO-LLVM.md  FIXES-RISCV-C-TOOLCHAIN.md  FIXES.md  HANDBOOK_PROGRESS.md  LICENSE  README.md  REQUIREMENTS_MATRIX.md  SECURITY.md  START_HERE.md  SUBMISSION_CHECKLIST.md  TEST_STATUS.md  package-lock.json  package.json  run-full-project.sh  stop-full-project.sh  week-01-report.md
community/: README.md
data/: automatic-public-verification-proof.json  credential-revocation.sha256  ledger.json  offckb-chain-state.json  offckb-issuer-public.json  trusted-issuers.json
deployment/: scripts.json  system-scripts.json
digital-credentials-workspace/: Cargo.toml  Makefile  README.md
digital-credentials-workspace/contracts/credential-revocation/: Cargo.toml  Makefile  README.md
digital-credentials-workspace/contracts/credential-revocation/src/: error.rs  lib.rs  main.rs
docs/: AUTOMATIC_END_TO_END_SETUP.md  CKB_VIZ_DECODER_PROPOSAL.md  COMMUNITY_CONTRIBUTION.md  CREDENTIAL_CELL_DATA_FORMAT.md  NERVOS_TALK_RELEASE_CHECKLIST.md  PUBLIC_INSPECTOR.md  V2_IMPLEMENTATION_GUIDE.md
evidence/: README.md  run-summary.json  v2-inspector-smoke-summary.json  v2-node-tests.txt  v2-offline-inspector.txt  v2.1-ci-local.txt  v2.1-community-conformance.txt  v2.1-http-smoke-summary.json  v2.1-node-tests.txt  v2.1-proof-verifier.txt  v2.1.1-automatic-launcher-node-tests.txt  v2.1.1-automatic-launcher-shell-checks.txt  v2.1.1-no-install-guard.txt  (+2 more)
(+88 files in other folders)
