[package]
name = "credential-revocation"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "CKB Type Script enforcing issuer-authorized, issuer-owned, per-Cell ACTIVE-to-REVOKED academic credential transitions."

[dependencies]
ckb-std = "=0.17.2"

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
